# terrauto_common

./: README.md
.github/workflows/: build.yaml
cmake/terrauto_cmake/: CMakeLists.txt  package.xml  terrauto_cmake-extras.cmake
cmake/terrauto_cmake/cmake/: terrauto_package.cmake
cmake/terrauto_lint_common/: CMakeLists.txt  package.xml
common/terrauto_type_adapter/: CMakeLists.txt  package.xml
common/terrauto_type_adapter/include/terrauto_type_adapter/: pcl_type_adapter.hpp
common/terrauto_type_adapter/src/: pcl_type_adapter.cpp
tools/create_ros2_pkg/: create_ros2_pkg.sh
tools/create_ros2_pkg/template/: .CMakeLists.txt  .component.cpp  .component.hpp  .node.cpp  .package.xml
